# Boyonodes

./: .gitignore  BoyoAudioEval.py  BoyoBastardLoops.py  BoyoControl.py  BoyoLoadVideoDirectory.py  BoyoLoopCollector.py  BoyoPromptLoop.py  BoyoResolutionCalc.py  BoyoWatermarks.py  Boyomandelbrot.py  NODESREADME.md  Portable auto_install_nodes.bat  Portable install_simple.bat  Portable with logging install_custom_nodes.bat  README_Asset_Manifests.md  README_chatterbox_install.md  __init__.py  asset_manifest_schema.json  audio_padding_readme_updated.md  boyo_asset_grabber_advanced.py  boyo_asset_grabber_simple.py  boyo_audio_duration_analyzer.py  boyo_audio_padder.py  boyo_chatterbox_turbo_generate.py  boyo_chatterbox_turbo_loader.py  boyo_for_loops_exact.py  boyo_frame_counter.py  boyo_image_crop.py  boyo_image_grab.py  boyo_latent_cache_updater.py  boyo_latent_passthrough.py  boyo_latent_switch.py  boyo_load_image_batch.py  boyo_load_image_list.py  boyo_loop_reset.py  boyo_lora_config_inspector.py  boyo_lora_config_processor.py  boyo_lora_info_sender.py  boyo_lora_json_builder.py  boyo_lora_paired_loader.py  (+40 more)
.github/workflows/: publish.yml
Workflows/: BoyoLoraLoader Example Workflow.json  BoyoVision.json  Censored Vae Example.json  Dragon Diffusion Asset Downloader.json  Dragon Diffusion Audio Padding Example.json  Dragon Diffusion BoyoVision Captioner.json  DragonDiffusion Chatterbox TTS.json  Load Image List Example.json  Ollama Prompt Storyboard.json
luts/: 01_Best LUTs_Boost Shadow.cube  01_Fujifilm LUTs_Retro Sharpen.cube  02_Sony LUTs_Cinematic.cube  04_Color Finale LUTs_Insta Look.cube  04_Film Emulation LUTs_Dramatic Light.cube  05_Vlog LUTs_Clean Tones .cube  06_Film LUTs_Retro Frame.cube  06_Sony LUTs_Nature.cube  07_Photoshop LUTs_Cinematic.cube  07_VSCO LUTs_Contrast.cube  09_Vintage_LUTs_Cold Shade.cube  10_Inspired By Peter McKinnon LUTs_Dark Shadows.cube  Blue&Pink.cube  Cool_Natural_Breeze.cube  Creative_-_Kodak_Wratten_85A_.cube  DC1_03_cold_light_of_day_v2.cube  Dark_Man_X.cube  Gamma Correction.cube  Light Rays.cube  Low_light_King_346.cube  TDH.cube  cannon_cool_corr_look_224.9R8A3608.cube
mega_prompts/action/: instagram_actions.txt
mega_prompts/clothing/: instagram_clothing.txt
mega_prompts/mood/: instagram_mood.txt
mega_prompts/scene/: instagram_scenes.txt
mega_prompts/subject/: instagram_subjects.txt
web/js/: BoyoPromptRelayEncodeTimeline.js  boyo_clipper.js
